# Lidar_nav2_ws

./: .gitattributes  .gitignore  .gitmodules  Environment_Setup_EN.md  LICENSE  README.md  README_EN.md  nav2_real.sh  环境搭建.md
.understand-anything/: knowledge-graph.json
.understand-anything/tmp/: fastlio-humanoid-import-input.json  fastlio-humanoid-scan-files.json  fastlio-humanoid-structure.json  knowledge-graph.before-fastlio-humanoid.json  merge-fastlio-humanoid-graph.cjs
Lidar_nav2_ws1/: Environment_Setup_EN.md  README.md  README_EN.md  环境搭建.md
Lidar_nav2_ws1/.understand-anything/: .understandignore  fingerprints.json  meta.json
Lidar_nav2_ws1/.understand-anything/tmp/: fastlio-humanoid-fingerprint-input.json  fastlio-humanoid-import-map.json  fastlio-humanoid-structure-input.json
Lidar_nav2_ws1/docs/: cpu_real_deployment.md
Lidar_nav2_ws1/scripts/: build_cpu_real.sh  mapping_real.sh
Lidar_nav2_ws1/src/lio_interface/launch/: lio_interface_launch.py
Lidar_nav2_ws1/src/livox_ros_driver2-master/config/: MID360s_config.json
Lidar_nav2_ws1/src/me_nav2_bringup/: CMakeLists.txt  package.xml
Lidar_nav2_ws1/src/me_nav2_bringup/config/: vehicle.yaml
Lidar_nav2_ws1/src/me_nav2_bringup/launch/: cpu_real_nav.launch.py  pointcloud_to_laserscan_launch.py
Lidar_nav2_ws1/src/me_nav2_bringup/map/: test_4_27.pgm
Lidar_nav2_ws1/src/me_nav2_bringup/rviz/: nav2.rviz
Lidar_nav2_ws1/src/pcd2pgm-master/config/: pcd2pgm.yaml
Lidar_nav2_ws1/src/registration/global_relocalization_kiss_matcher/: CMakeLists.txt  package.xml
Lidar_nav2_ws1/src/registration/global_relocalization_kiss_matcher/include/slam/: pose_graph_node.hpp
Lidar_nav2_ws1/src/registration/global_relocalization_kiss_matcher/launch/: global_kiss_matcher_relocalization_launch.py
docs/: cpu_real_deployment.md
scripts/: RUN.sh  build.sh  build_cpu_real.sh  build_humanoid_localization.sh  check_nav2_cmd_vel.sh  docker_run.sh  mapping_real.sh  mapping_sim.sh  nav2_real.sh  nav2_sim.sh  save_map.sh  save_pcd.sh
src/00_sensor/Livox-SDK2-master/: CMakeLists.txt  package.xml
src/00_sensor/Livox-SDK2-master/cmake/: livox_sdk2Config.cmake.in
src/00_sensor/Livox-SDK2-master/sdk_core/: CMakeLists.txt
src/00_sensor/livox_ros_driver2-master/: CMakeLists.txt  package.xml
src/00_sensor/rtk_msgs/: CMakeLists.txt  package.xml
src/00_sensor/rtk_node/: CMakeLists.txt  package.xml
src/00_sensor/rtk_node/include/rtk_node/: message_conversions.hpp  rtk_node.hpp  rtk_parser.hpp  serial_port.hpp
src/00_sensor/rtk_node/launch/: rtk.launch.py
src/00_sensor/rtk_node/src/: message_conversions.cpp  rtk_node.cpp  rtk_parser.cpp  serial_port.cpp
src/00_sensor/rtk_node/test/: message_conversions_test.cpp  rtk_parser_test.cpp
src/01_chassis/autodrive_d02_can/: CMakeLists.txt  README.md  package.xml
src/01_chassis/autodrive_d02_can/include/autodrive_d02_can/: can_decoder.hpp  can_encoder.hpp  cmd_vel_converter.hpp
src/01_chassis/autodrive_d02_can/launch/: d02_chassis_bringup.launch.py  d02_chassis_control_test.launch.py  d02_keyboard_control_test.launch.py  d02_vehicle_control.launch.py  d02_vehicle_feedback.launch.py
src/01_chassis/autodrive_d02_can/src/: can_decoder.cpp  can_encoder.cpp  cmd_vel_converter.cpp  d02_chassis_control_test_node.cpp  d02_cmd_vel_to_vehicle_control_node.cpp  d02_vehicle_control_sender_node.cpp  d02_vehicle_feedback_decoder_node.cpp
src/01_chassis/autodrive_d02_can/test/: d02_cmd_vel_converter_test.cpp  d02_target_speed_feedback_decoder_test.cpp  d02_vehicle_control_encoder_test.cpp
src/01_chassis/autodrive_d02_can_msgs/: CMakeLists.txt  package.xml
src/FAST_LIO_LOCALIZATION_HUMANOID/: README.md
src/FAST_LIO_LOCALIZATION_HUMANOID/FAST_LIO/: CMakeLists.txt  README.md
src/FAST_LIO_LOCALIZATION_HUMANOID/open3d_loc/: CMakeLists.txt  package.xml
src/get_urdf/: COLCON_IGNORE
src/gld_robot_description/: package.xml
src/gld_robot_description/model/: gld_robot_description.urdf
src/gui_teleop/: COLCON_IGNORE
src/ign_sim_pointcloud_tool/: COLCON_IGNORE
src/lio_interface/launch/: pointlio_lio_interface_launch.py
src/lio_interface/src/: lio_interface.cpp
src/livox_laser_simulation_RO2/: COLCON_IGNORE
src/livox_ros_driver2/: README.md
src/livox_ros_driver2-master/: build.sh
src/livox_ros_driver2/launch/: fast_lio_msg_MID360_launch.py
src/livox_ros_driver2/src/: livox_ros_driver2.cpp
src/localization/FAST_LIO/: CMakeLists.txt  package.xml
src/localization/Sophus/: COLCON_IGNORE
src/localization/point_lio/: COLCON_IGNORE
src/localization/rtabmap_ros/: COLCON_IGNORE
src/me_nav2_bringup/: package.xml
src/me_nav2_bringup/config/: Pointcloud2d_3d.yaml  nav2_params.yaml  slam_toolbox_params.yaml  vehicle.yaml
src/me_nav2_bringup/launch/: cpu_real_common.py  cpu_real_mapping.launch.py  cpu_real_nav.launch.py  my_nav2_launch.py
src/me_nav2_bringup/map/: nav_test_4_27.pgm  nav_test_4_27.yaml  site_a_full.pgm  site_a_full.yaml  test_4_27.yaml
src/me_nav2_bringup/pcd/: site_a_full.pcd
src/me_nav2_bringup/rviz/: nav2.rviz
src/pcd2pgm-master/: package.xml
src/registration/3d_bbs/: COLCON_IGNORE
src/registration/global_relocalization/: CMakeLists.txt  COLCON_IGNORE  package.xml
src/registration/global_relocalization_kiss_matcher/: CMakeLists.txt  package.xml
src/registration/global_small_gicp_relocalization/: CMakeLists.txt  COLCON_IGNORE  package.xml
src/registration/icp_registration/: COLCON_IGNORE
src/registration/open3d_loc/: COLCON_IGNORE
src/registration/small_gicp_relocalization/: CMakeLists.txt  README.md  package.xml
src/registration/small_gicp_relocalization/include/small_gicp_relocalization/: small_gicp_relocalization.hpp
src/registration/small_gicp_relocalization/launch/: small_gicp_relocalization_launch.py
src/registration/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
src/remote_bridge/: CMakeLists.txt  package.xml
src/remote_bridge/src/: remote_bridge_node.cpp
src/sensor_scan_generation/launch/: sensor_scan_generation_launch.py
src/sensor_scan_generation/src/: sensor_scan_generation.cpp
(+35 files in other folders)
