<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>remote_bridge</name>
  <version>1.0.0</version>
  <description>HTTP to ROS2 bridge for remote control</description>
  <maintainer email="neardi@todo.com">neardi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>libmicrohttpd-dev</depend>
  <depend>nlohmann-json3-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
