<?xml version="1.0"?>
<package format="3">
  <name>rtk_node</name>
  <version>0.1.0</version>
  <description>Serial RTK GNSS/INS parser and ROS2 publishers for AutoDrive.</description>
  <maintainer email="start_fall@qq.com">KJUNCLE</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rtk_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
