<?xml version="1.0"?>
<package format="3">
  <name>global_relocalization_kiss_matcher</name>
  <version>0.1.0</version>
  <description>PointCloud Visualizer for ROS2</description>
  <maintainer email="shapelim@mit.edu">Hyungtae Lim</maintainer>
  <maintainer email="ted97k@kaist.ac.kr">Daebeom Kim</maintainer>

  <license>MIT license</license>

  <depend>rcutils</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>libomp-dev</depend>
  <depend>small_gicp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
